# adk-samples

./: .gitignore  README.md
.github/workflows/: dependabot-auto-merge.yml  gemini-cli.yml  gemini-issue-automated-triage.yml  gemini-pr-review.yml  ruff-checks.yml  test_templated_agent.yaml
android/: README.md
android/agents/fun-facts/: README.md  settings.gradle.kts
android/agents/fun-facts/app/: build.gradle.kts
android/agents/fun-facts/app/src/main/: AndroidManifest.xml
android/agents/fun-facts/app/src/main/java/com/example/adkdemoapp/: ChatScreen.kt  ChatViewModel.kt  MainActivity.kt
android/agents/fun-facts/app/src/main/java/com/example/adkdemoapp/agents/: FunFactsAgent.kt
android/agents/fun-facts/app/src/main/java/com/example/adkdemoapp/ui/theme/: Color.kt  Theme.kt  Type.kt
android/agents/fun-facts/app/src/main/res/values/: strings.xml  themes.xml
android/agents/fun-facts/gradle/: libs.versions.toml
android/agents/fun-facts/gradle/wrapper/: gradle-wrapper.properties
kotlin/: README.md
kotlin/agents/fun-facts/: README.md  build.gradle.kts  settings.gradle.kts
kotlin/agents/fun-facts/src/main/kotlin/com/google/adk/samples/agents/funfacts/: FunFactsAgent.kt  Main.kt  WebMain.kt
kotlin/agents/llm-auditor/: README.md  build.gradle.kts  settings.gradle.kts
kotlin/agents/llm-auditor/src/main/kotlin/com/google/adk/samples/agents/llmauditor/: CriticAgent.kt  CriticPrompt.kt  LlmAuditorAgent.kt  Main.kt  ReviserAgent.kt  ReviserPrompt.kt  WebMain.kt
python/agents/RAG/: pyproject.toml
python/agents/ai-security-agent/: README.md  pyproject.toml
python/agents/airflow_version_upgrade_agent/: pyproject.toml
python/agents/blog-writer/: requirements.txt
python/agents/brand-aligned-presentations/: .env.example  README.md  pyproject.toml
python/agents/brand-aligned-presentations/eval/: eval_pipeline.py
python/agents/brand-aligned-presentations/presentation_agent/: agent.py
python/agents/brand-aligned-presentations/presentation_agent/deployment/: deploy.py
python/agents/brand-aligned-presentations/presentation_agent/shared_libraries/: config.py
python/agents/brand-aligned-presentations/presentation_agent/sub_agents/google_research/: prompt.py
python/agents/brand-aligned-presentations/tests/: test_agent.py
python/agents/brand-aligner/: .env.template  README.md  pyproject.toml
python/agents/brand-aligner/brand_aligner_agent/: __init__.py  agent.py  auth.py  tools.py  utils.py
python/agents/brand-aligner/deployment/: deploy.py
python/agents/brand-aligner/tests/integration/: test_agent.py
python/agents/brand-aligner/tests/unit/: test_services.py  test_tools.py  test_utils.py
python/agents/brand-search-optimization/: pyproject.toml
python/agents/camel/: pyproject.toml
python/agents/currency-agent/: pyproject.toml
python/agents/currency-agent/mcp-server/: pyproject.toml
python/agents/customer-service/: pyproject.toml
python/agents/cyber-guardian-agent/: pyproject.toml
python/agents/data-science/: pyproject.toml
python/agents/economic-research-agent/: pyproject.toml  requirements.txt
python/agents/economic-research-agent/economic_research/deployment/: deploy.py
python/agents/fomc-research/: pyproject.toml
python/agents/fun-facts/: README.md  pyproject.toml
python/agents/genmedia-for-commerce/: pyproject.toml
python/agents/hierarchical-workflow-automation/: pyproject.toml  requirements.txt
python/agents/high-volume-document-analyzer/: pyproject.toml
python/agents/llm-auditor/: pyproject.toml
python/agents/llm-auditor/llm_auditor/: __init__.py
python/agents/llm-auditor/llm_auditor/sub_agents/critic/: __init__.py
python/agents/llm-auditor/llm_auditor/sub_agents/reviser/: __init__.py
python/agents/multiformat-hybrid-rag/: pyproject.toml
python/agents/multiformat-hybrid-rag/data_ingestion_pipeline/: pyproject.toml
python/agents/parallel_task_decomposition_execution/: pyproject.toml  requirements.txt
python/agents/plumber-data-engineering-assistant/: pyproject.toml
python/agents/plumber-data-engineering-assistant/plumber_agent/: __init__.py
python/agents/policy-as-code/: pyproject.toml
python/agents/product-catalog-ad-generation/: .env.example  .gitignore  pyproject.toml
python/agents/product-catalog-ad-generation/content_gen_agent/: agent.py
python/agents/product-catalog-ad-generation/content_gen_agent/func_tools/: generate_audio.py  generate_image.py  generate_storyline.py  generate_video.py
python/agents/product-catalog-ad-generation/content_gen_agent/utils/: evaluate_media.py
python/agents/product-catalog-ad-generation/scripts/: 02-deploy-gcs-and-bq.sh  generate_sample_data.py  populate_bq_with_gemini.py
python/agents/retail-ai-location-strategy/app/frontend/: package-lock.json
python/agents/safety-plugins/: pyproject.toml
python/agents/short-movie-agents/: Changelog.md  README.md  pyproject.toml
python/agents/short-movie-agents/app/: __init__.py  video_agent.py
python/agents/small-business-loan-agent/: Makefile  pyproject.toml
python/agents/supply-chain/: pyproject.toml
python/agents/tau2-benchmark-agent/: pyproject.toml
python/agents/travel-concierge/: README.md  pyproject.toml
python/agents/travel-concierge/deployment/: deploy.py
python/agents/travel-concierge/eval/: test_eval_arize.py
