[project]
name = "camel"
version = "0.1.0"
description = "CaMeL Research Agent Demo using Google ADK"
authors = [
    { name = "sammalik-lgtm", email = "sammalik@google.com" }
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "google-adk>=1.31.1",
    "google-genai>=1.5.0",
    "pdfplumber>=0.11.5",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.10.0",
    "typing-extensions>=4.14.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.93.0",
]

[tool.ruff]
# Point back to the Master template in the root
extend = "../../../pyproject.toml"

[tool.ruff.lint]
ignore = [
    "C901", 
    "PLR0911", 
    "PLR0912", 
    "PLR0915", 
    "UP046", 
    "UP047"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
# CRITICAL: This tells Ruff that 'camel' is THIS sample's code
known-first-party = ["camel"]

[tool.hatch.build.targets.wheel]
# Ensures Hatchling finds the package folder correctly
packages = ["camel"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"