[project]
name = "multiformat-hybrid-rag"
version = "0.1.0"
description = "Production RAG system with multi-format ingestion, contextual chunking, and hybrid search on GCP"
authors = [
    {name = "Lorenzo Spataro", email = "lspataro@google.com"},
]
license = { text = "Apache License 2.0" }
readme = "README.md"
dependencies = [
    "google-adk>=1.28.1,<2.0.0",
    "google-cloud-vectorsearch",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "google-cloud-aiplatform[evaluation]>=1.130.0",
    "fastapi>=0.115.8,<1.0.0",
    "uvicorn~=0.34.0",
    "google-cloud-storage>=2.0.0",
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-bigquery-connection>=1.0.0",
    "langchain-text-splitters>=1.1.2",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "pymupdf>=1.24.0",
    "python-pptx>=1.0.2",
    "python-docx>=1.1.0",
    "google-auth>=2.0.0",
    "backoff>=2.2.1",
    "kfp>=2.16.0",
    "google-cloud-run>=0.16.0",
]
requires-python = ">=3.10,<3.14"


[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.23.8,<1.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
]

[project.optional-dependencies]
jupyter = [
    "jupyter>=1.0.0,<2.0.0",
]
eval = [
    "google-adk[eval]>=1.28.1,<2.0.0",
]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "ty>=0.0.1a0",
    "codespell>=2.2.0,<3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B006"]
per-file-ignores = {"*.ipynb" = ["E402"]} # ignore line too long, too complex

[tool.ruff.lint.isort]
known-first-party = ["app", "frontend", "utils", "src"]

[tool.ty]
# ty is Astral's Rust-based type checker (same team as ruff/uv)
# See: https://docs.astral.sh/ty/

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
exclude = [".venv/**"]

[tool.ty.rules]
# Ignore common issues with third-party libraries and dynamic code patterns
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
not-subscriptable = "ignore"
deprecated = "ignore"
invalid-raise = "ignore"
possibly-missing-submodule = "ignore"

[tool.codespell]
ignore-words-list = "rouge,ignora"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/*.ipynb,**/package-lock.json"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["app", "frontend", "utils", "src"]

[tool.agent-starter-pack]
base_template = "adk_base"
description = "Production RAG system with multi-format ingestion, contextual chunking, and hybrid search on GCP"
example_question = "What information do you have in your knowledge base?"

[tool.agent-starter-pack.settings]
name = "multiformat-hybrid-rag"
base_template = "adk"
agent_directory = "app"
deployment_targets = ["cloud_run"]
interactive_command = "make setup-infra && make playground"
