[project]
name = "data-ingestion-pipeline"
version = "0.1.0"
description = "RAG data ingestion pipeline for Vertex AI Pipelines"
readme = "README.md"
requires-python = ">=3.10, <=3.13"
dependencies = [
    "backoff>=2.2.0",
    "google-cloud-aiplatform>=1.80.0",
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-bigquery-connection>=1.0.0",
    "google-cloud-pipeline-components>=2.19.0",
    "google-cloud-storage>=2.0.0",
    "google-cloud-vectorsearch>=0.4.0",
    "kfp>=2.0.0",
    "langchain-text-splitters>=1.1.2",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_ingestion_pipeline"]
